Bug 238423 - [4.4.76] Cannot create new tab in konsole
Summary: [4.4.76] Cannot create new tab in konsole
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.99
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-21 20:03 UTC by Johannes Obermayr
Modified: 2010-05-25 05:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Profiles dialog (31.02 KB, image/png)
2010-05-23 19:27 UTC, Johannes Obermayr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Obermayr 2010-05-21 20:03:33 UTC
Version:           2.4.99 (using 4.4.76 (KDE 4.4.76 (KDE 4.5 >= 20100516)) "release 1", KDE:KDE4:UNSTABLE:Desktop / openSUSE_11.2)
Compiler:          gcc
OS:                Linux (i686) release 2.6.34-35-pae

File->New Tab->No profiles available (grayed) cannot be the right way to create a new tab ...
Comment 1 Kurt Hindenburg 2010-05-23 19:08:33 UTC
In general you should at least have the Shell profile.

What does 'konsole --list-profiles' output?

 Is there any profiles under Settings->Configure Profiles?
Comment 2 Johannes Obermayr 2010-05-23 19:27:54 UTC
Created attachment 43823 [details]
Profiles dialog

$ konsole --list-profiles
konsole(2213) Konsole::SessionManager::loadProfile: Could not load profile from  "/home/ei-jo/.kde4/share/apps/konsole/.profile" 
Root_Shell

I cannot delete the profile shown in the ksnapshot and I never have created/used a profile ...
Comment 3 Kurt Hindenburg 2010-05-25 04:47:33 UTC
The shortcut still works.  Just can't use the menu
Comment 4 Kurt Hindenburg 2010-05-25 05:29:27 UTC
SVN commit 1130310 by hindenburg:

Allow user to create new tabs from the menu when there are no profiles in the menu list. 
With the new menus were committed recently, this issue was missed.

This has to be in 4.5

GUI
BUG: 238423


 M  +3 -3      ProfileList.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1130310