Allow user to create new tabs from the menu when there are no profiles in the menu list. With the new menus were committed recently, this issue was missed.

This has to be in 4.5

GUI
BUG: 238423

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1130310